2012-04-06  John D. Ramsdell  <ramsdell@mitre.org>

	* loader.c (addstr): Fixed two bugs associated with the end of a
	string.  Fixed the case in which the last character in a buffer is
	double quote and the previous character is part of a numerical
	escape.  Also fixed the case in which a pushed buffer was followed
	by a buffer read giving a double quote, but the state s1 was not
	SEEN_NOTHING.

2012-04-05  John D. Ramsdell  <ramsdell@mitre.org>

	* loader.c (pushstring, addstr): In order to better integrate with
	other Unix tools, numeric string escapes now consist of one, two,
	or three octal digits.  This change makes this version
	incompatible with previous versions.

	* interp.c (main): Added the -l option that loads a Lua script
	after the loading of datalog.lua.  The Lua script can be used to
	add primitives.

2012-04-04  John D. Ramsdell  <ramsdell@mitre.org>

	* NEWS: Converted the file to use outline format.

2012-04-03  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.texi (Import/Export): Added an example showing
	/etc/passwd as the source of a database table.

	* Makefile.am (dist_noinst_SCRIPTS): Added the datalogimport and
	datalogexport scripts.

2012-04-02  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.texi (Import/Export):  Added a new chapter describing
	how to import and export tab seperated values.

2012-04-01  John D. Ramsdell  <ramsdell@mitre.org>

	* interp.c (print_answers_as_tab_separated_values): Added the -t
	option that prints answers using tab separated values.

	* datalog.texi (Extending): Added a reference to the addition
	primitive comment in datalog.lua.in.

	* datalog.lua.in (add_iter_prim): Added a comment that shows how
	to add addition as a primitive.

	* datalog.lua.in (mk_intern): Coerced identifiers to be interned
	into a string instead of relying on callers to always provide a
	string.

2012-02-25  John D. Ramsdell  <ramsdell@mitre.org>

	* lua/*: Updated Lua sources to version 5.1.5.
